--- a/src/components/App/App.less
+++ b/src/components/App/App.less
@@ -31,9 +31,25 @@
 .card {
   box-shadow: 5px 10px black;
   width: 29%;
+  height: 300px;
   margin: 10px;
   border: 1px solid black;
   padding: 0 10px;
+  display: inline-table;
+}
+
+.background-wallpaper {
+  img {
+    height: 100%;
+    width: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    overflow: hidden;
+    display: inline-block;
+  }
+}
+
+nav {
   display: inline-block;
 }
 
