--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -29,6 +29,37 @@
   padding: 0 10px;
   display: inline-table;
 }
+.intro-header {
+  position: absolute;
+  top: 20vh;
+  right: 35vw;
+}
+.footer {
+  margin-top: 20px;
+}
+nav {
+  position: fixed;
+  background-color: rgba(255, 255, 255, 0.2);
+  width: 100%;
+}
+nav ul {
+  list-style-type: none;
+}
+nav ul li {
+  display: inline-block;
+  margin: 0 10px;
+  padding: 10px;
+}
+nav ul li .brand {
+  margin-right: 40px;
+}
+nav ul li:hover a {
+  color: black;
+}
+nav ul li a {
+  text-decoration: none;
+  color: #eeeeee;
+}
 .background-wallpaper img {
   height: 100%;
   width: 100%;
