implemented api test

--- a/src/components/App/App.less
+++ b/src/components/App/App.less
@@ -8,6 +8,10 @@
   font-family: 'Thasadith', sans-serif
 }
 
+.font-martel {
+  font-family: 'Martel', sans-serif;
+}
+
 .small-text {
   font-size: 12px;
 }
@@ -40,8 +44,10 @@
 
 .intro-header {
   position: absolute;
-  top: 20vh;
+  top: 10vh;
   right: 35vw;
+  text-transform: uppercase;
+  text-align: center;
 }
 
 .footer {
