--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -4,6 +4,9 @@
 .font-thasadith {
   font-family: 'Thasadith', sans-serif;
 }
+.font-martel {
+  font-family: 'Martel', sans-serif;
+}
 .small-text {
   font-size: 12px;
 }
@@ -31,8 +34,10 @@
 }
 .intro-header {
   position: absolute;
-  top: 20vh;
+  top: 10vh;
   right: 35vw;
+  text-transform: uppercase;
+  text-align: center;
 }
 .footer {
   margin-top: 20px;
