--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -13,6 +13,9 @@
 .text-center {
   text-align: center;
 }
+.float-right {
+  float: right;
+}
 .font-weight-normal {
   font-weight: normal;
 }
@@ -41,6 +44,13 @@
 }
 .footer {
   margin-top: 20px;
+}
+.select-disable {
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -o-user-select: none;
+  user-select: none;
 }
 nav {
   position: fixed;
@@ -71,9 +81,6 @@ nav ul li a {
   background-position: center;
   background-repeat: no-repeat;
   overflow: hidden;
-  display: inline-block;
-}
-nav {
   display: inline-block;
 }
 h1,
