--- a/src/components/App/App.less
+++ b/src/components/App/App.less
@@ -20,6 +20,10 @@
   text-align: center;
 }
 
+.float-right {
+  float: right;
+}
+
 .font-weight-normal {
   font-weight: normal;
 }
@@ -53,6 +57,15 @@
 .footer {
   margin-top: 20px;
 }
+
+.select-disable {
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+}
+
 
 nav {
   position: fixed;
@@ -94,11 +107,6 @@ nav {
     display: inline-block;
   }
 }
-
-nav {
-  display: inline-block;
-}
-
 
 h1, h2, h3 {
   font-weight: 300;
@@ -160,6 +168,7 @@ h1, h2, h3 {
   }
 }
 
+// Timeline
 @media screen and (min-width: 40em) {
   .container {
     max-width: 1000px;
