--- a/src/components/App/App.less
+++ b/src/components/App/App.less
@@ -1,3 +1,8 @@
+// Media query break points
+@desktop: ~"screen and (min-width: 960px)";
+@tablet: ~"screen and (min-width: 720px)";
+@phone: ~"screen and (min-width: 320px)";
+
 // Global variables
 @grey: #ddd;
 
@@ -40,7 +45,6 @@
   box-shadow: 5px 10px black;
   width: 29%;
   height: 300px;
-  margin: 10px;
   border: 1px solid black;
   padding: 0 10px;
   display: inline-table;
@@ -165,6 +169,52 @@ h1, h2, h3 {
 
   time {
     font-style: italic;
+  }
+}
+
+@media @tablet {
+  html {
+    background-color: yellow !important;
+  }
+
+  .card {
+    //width: 40%;
+    margin: 20px 35px;
+    max-height: 300px;
+  }
+}
+
+@media @phone {
+  .background-wallpaper {
+    color: white;
+    img {
+      height: 100vh;
+      width: 100vw;
+    }
+  }
+
+  .intro-header {
+    background-color: rgba(0, 0, 0, 0.4);
+    top: 40vh;
+    width: 100%;
+    left: 0;
+
+    h1 {
+      font-size: 19px;
+    }
+  }
+}
+
+@media @desktop {
+  html {
+    background-color: red !important;
+  }
+
+  .card {
+    width: 29%;
+    max-height: 300px;
+    overflow: hidden;
+    text-overflow: ellipsis !important;
   }
 }
 
